Make sure the magnifying glass always stay with the value in detail page. - In detail_metadata_internal.html (line 14,16,18,26), wrap value and magnifying   glass with a span tag. - In etail_metadata_slugs_internal.html (line 11,12,20), wrap value and   magnifying glass with a span tag. - In opus.css (line 218-222), add the styling to group the magnifying   glass and the value together in detail page.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -215,6 +215,12 @@ so that both "Recent Announcements" and "Message" can be vertically aligned. */
     white-space: nowrap;
 }
 
+/* Group the magnifying glass and the value together in detail page. This will 
+make sure they always stay together when wrapping into a different line */
+#detail .op-detail-entry-values {
+    display: inline-block;
+}
+
 #nav-sidebar {
     margin: 0;
     padding: 0;
